# Server/Application/Models/Dtos/MQTT/DeviceIntervalUpdateDto.cs
@@ -1,0 +1,12 @@
+﻿using System.Text.Json.Serialization;
+
+namespace Application.Models.Dtos.MQTT;
+
+public class DeviceIntervalUpdateDto
+{
+    [JsonPropertyName("deviceId")]
+    public required string DeviceId { get; set; }
+    
+    [JsonPropertyName("interval")]
+    public int Interval { get; set; }
+}
